--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           github_user_name: skittlexyz
           svg_out_path: dist/github-contribution-grid-snake.svg
-          palette: github-light
+          palette: github
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
